# EGTR_Match

./: .gitignore  上下位机串口通信协议.md
lower/: .gitignore  .mxproject  .project  CMakeLists.txt  GPIO_usage.xlsx  f407.cfg  lower.ioc  lower.xml
lower/Botcontrol/: botmotor.c  botmotor.h  motordriver.c  motordriver.h  picalculator.c  picalculator.h  picontrol.h  serialcontrolor.c  serialcontrolor.h
lower/Botstatus/: serialsend.c  serialsend.h
lower/Inc/: main.h  stm32f4xx_it.h
lower/MDK-ARM/: JLinkLog.txt  lower.uvguix.Ray  lower.uvoptx  lower.uvprojx  startup_stm32f407xx.lst  startup_stm32f407xx.s
lower/MDK-ARM/lower/: botmotor.crf  botmotor.d  jansson_config.crf  jansson_config.d  lower.axf  lower.build_log.htm  lower.hex  lower.htm  lower.lnp  lower.map  lower_lower.dep  main.crf  main.d  motordriver.crf  motordriver.d  picalculator.crf  picalculator.d  serialcontrolor.crf  serialcontrolor.d  serialsend.crf  serialsend.d  startup_stm32f407xx.d  stm32f4xx_hal.crf  stm32f4xx_hal.d  stm32f4xx_hal_cortex.crf  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.crf  (+35 more)
lower/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
upper/: .gitignore  CMakeLists.txt  cserial.cpp  cserial.h  main.cpp
upper/CarControl/: ICar.h
upper/Communicate/: BotDevice.cpp  BotDevice.h  Botdevice.cpp  Botdevice.h  botdevice.cpp  botdevice.h  serialportdevice.h
upper/Communication/: serialcommunicate.h
upper/Control/: controlerfactor.cpp  controlerfactor.h  controlerregister.cpp  controlerregister.h  icontroler.h
upper/Device/: botdevice.h  serialportdevice.cpp  serialportdevice.h
(+1 files in other folders)
